fixes overflow issue and new frame image

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -140,9 +140,7 @@ html {
    html {
     background: url('../img/bgImage.jpg') no-repeat center;
     background-size: cover;
-    position: fixed;
-    width: 100%;
-    height: 100%;
+    padding-bottom: 5rem;
   }
 
   .constrainer {
